# oop_boolean_networks_rna_mirna

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: getting-started.md  index.md
notebooks/: BN.ipynb  BN_RNA_Abundance.ipynb  BN_RNA_miRNA.ipynb  sequential_perturbations_1.ipynb
package/: __init__.py  abn_mir_helper_functions.py  abn_mir_plotting_functions.py  abundant_boolean_networks.py  abundant_boolean_networks_with_micro_rna.py  bn_graph_methods.py  bn_mir_helper_functions_V1.py  boolean_networks.py  helper.py  micro_rna_2.py  mirna_demo_methods.py  nx_docs.py  plotting.py  plotting_helper_methods.py  plotting_revised.py  seq_pert_as_py.py  sequential_perturbations_methods.py  widgets_dev.ipynb
reports/figures/sequential_perturbations/: sequential_perturbations_1.html
tests/: testing__boolean_networks.py
