[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "oop_boolean_networks_rna_mirna"
version = "0.0.1"
description = "This is a project to implement a Boolean Network system and related behaviors such as differential equations to calculate RNA abundances and miRNA effects on RNA abundances."
authors = [
  { name = "Alan MH Beem" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["oop_boolean_networks_rna_mirna"]
force_sort_within_sections = true


